# mirk

./: .env.example  .gitignore  pyproject.toml
examples/: one_shot.ipynb  one_shot.py  one_shot.sh
mirk/: __init__.py  providers_cv.py  providers_vlm.py  streaming_pipeline.py
tests/: README.md  test_providers_cv.py  test_providers_vlm.py
